--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=BlogDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "icv3780cbwedcfnqwjkefh8923dweRG$erewfwggqq34gedf13",
+    "Issuer": "https://localhost:44354",
+    "Audience": "https://localhost:44354"
   }
 }
